BEISDEAS-177 Solve carousel overflow issue

--- a/angular/src/app/boiler/landing-page/boiler-landing-page.component.scss
+++ b/angular/src/app/boiler/landing-page/boiler-landing-page.component.scss
@@ -1,4 +1,5 @@
 @import "styles/boiler";
+@import "styles/page";
 
 // Component specific variables
 
@@ -73,6 +74,12 @@
       display: none;
     }
 
+    .troubleshooting {
+      .page-row-content {
+        max-width: calc(100% - 2 * #{$mobile-side-margin});
+      }
+    }
+
     .page-row {
       padding: 0 0 0;
       background-color: white;
@@ -98,10 +105,8 @@
       font-family: Gotham, Arial, sans-serif;
       display: flex;
       align-items: center;
-      padding: 0 20px 0 20px;
-      border-style: solid;
-      border-width: 1px 0 0 0;
-      border-color: $light-medium-grey;
+      box-sizing: border-box;
+      border-top: 1px solid $light-medium-grey;
     }
 
     .link-button {
@@ -186,6 +191,7 @@
 
     .mobile-expander {
       padding: 25px 0 20px;
+      border-bottom: 2px solid $light-grey;
 
       .large-heading {
         font-size: 28px;
@@ -197,7 +203,7 @@
 
       &.selected-expander {
         background-color: $action-button-blue;
-        padding-left: 20px;
+        border-bottom: 0;
 
         .collapsible-heading {
           color: $lighter-grey;
@@ -212,6 +218,10 @@
           color: $lighter-grey;
         }
       }
+    }
+
+    .mobile-expander:last-of-type {
+      border-bottom: 0;
     }
   }
 
