--- a/angular/src/app/boiler/landing-page/carousel/carousel.component.scss
+++ b/angular/src/app/boiler/landing-page/carousel/carousel.component.scss
@@ -56,19 +56,21 @@
 
 .carousel {
   @include mobile() {
-    $item-margin: 10px;
+    $item-margin: 16px;
 
     .content {
       padding: 20px;
       background-color: $lighter-grey;
+      width: 100%;
+      box-sizing: border-box;
     }
 
     .carousel-items {
 
       .carousel-item {
         flex: 0 0 auto;
-        flex-basis: calc((100% - 2 * #{$item-margin}) / 1);
-        margin-right: $item-margin;
+        width: 100%;
+        box-sizing: border-box;
       }
 
       @for $i from 0 through 100 {
